# ionocast

./: .gitignore  README.md  config.yaml  netrc.example  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Calendar.css  Calendar.tsx  Globe.css  Globe.tsx  Navbar.css  Navbar.tsx  StarBackground.tsx  TogglePanel.css  TogglePanel.tsx  UIPanel.css  UIPanel.tsx  index.css
src/: PIPELINE.md
src/swp_data/: __init__.py  assemble.py  cli.py  config.py  dataset.py  extract.py  interpolate.py  lineage.py  logging_setup.py  parse.py  runlog.py  settings.py  verify.py
src/swp_data/sources/: __init__.py  cddis.py  gfz.py  omni.py
tests/: conftest.py  test_cadence.py  test_contracts_and_config.py  test_driver_alignment.py  test_lineage_and_integrity.py  test_resume_and_paths.py  test_splits_and_stats.py  test_timestamps.py
